--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.4.1
 Django==3.2.6
 django-widget-tweaks==1.4.8
+django-heroku==0.3.1
+gunicorn==20.0.4
 Pillow==8.3.1
 pytz==2021.1
 sqlparse==0.4.1
